# herdr-gateway

./: .gitignore  Cargo.toml  LICENSE  README.md  herdr-plugin.toml  install.sh  release.sh
.github/workflows/: release.yml
scripts/: fetch-binary.sh
src/: main.rs  shortcuts.rs
